--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "3.0.0",
-    "semantic-ui-react": "^0.68.3",
     "react-scripts": "0.9.5",
+    "redux": "^3.6.0",
+    "semantic-ui-react": "^0.68.3",
     "serve": "^5.1.5"
   },
   "scripts": {
