--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router": "3.0.0",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
