--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -11,6 +13,8 @@
     "react-router": "3.0.0",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "0.15.0",
     "semantic-ui-react": "^0.68.3",
     "serve": "^5.1.5"
   },
