--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "3.0.0",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "0.15.0",
     "semantic-ui-react": "^0.68.3",
